--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,12 +7,13 @@ body{
 }
 .container{
     font-family: 'Pacifico', cursive;
-    background-color: black;
+    background-color: rgb(0,0,0);
     padding: 0%;
     margin:0%;
     line-height: 60px;
     width: 100%;
     max-width: 100%;
+    border-radius: 3px;
 }
 .navbar-brand{
     color:RGB(212,175,55);
@@ -46,4 +47,9 @@ body{
 }
 .navbar-nav .show>.nav-link{
     color:	#F0E68C;
+}
+
+.mainlayout {
+    padding-top: 35px;
+    background-color:black;
 }
